--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body{
     margin: 0;
     min-height: 100vh;
-    background-image: url("shutterstock_255404977.jpg");
+    /*background-image: url("shutterstock_255404977.jpg");*/
+    background: linear-gradient(rgba(255, 255, 255, 1) 72%,rgba(255, 255, 255, 1) ,#d55300ff, #0000cbfe, #00c803ff);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 0 400px;    
+    background-position: bottom;    
     background-attachment: fixed;
     
 }
@@ -17,16 +18,56 @@ body:before{
     top: 0;
     left: 0;
     
-    background: linear-gradient(rgba(255, 255, 255, 1),rgba(255, 255, 255, 1) ,rgba(255, 255, 255, 0));
+    
     z-index: -1;
 }
 
-@media (max-width: 575.98px) {
-
+.titulo-md{
+    font-weight: 700 !important;
+}
+.titulo-sm{
+    font-weight: 400 !important;
+}
+p{
+    font-weight: 300 !important;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 767px) {
+    .logo{
+        height: 50px !important;
+    }    
+    .icon-top{
+        font-size: 50px !important;
+    }
+}
 
+@media (min-width: 767.98px) {
+    .logo{
+        height: 100px !important;
+    }
+    .icon-top{
+        font-size: 100px !important;
+    }
+}
+
+.fa-facebook-square:hover{
+    color: #3B5998 !important;
+}
+
+.fa-twitter-square:hover{
+    color: #55acee !important;
+}
+
+.icon-but-f:hover{
+    color: #3B5998 !important;
+}
+
+.icon{
+    font-size: 40px;
+}
+
+.icon-but-t:hover{
+    color: #55acee !important;    
 }
 
 .container{
@@ -36,4 +77,16 @@ body:before{
 
 *{
     font-family: 'Monda', sans-serif;
+}
+
+.bg-darker{
+    background: linear-gradient(#424242 50%,#424242,rgba(0,0,0,0)) !important;
+}
+
+.bg-footer{
+    background-color: #424242 !important;
+}
+
+#alert{
+    visibility: hidden;
 }
