--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
     margin: 0;
     min-height: 100vh;
-    /*background-image: url("shutterstock_255404977.jpg");*/
-    background: linear-gradient(rgba(255, 255, 255, 1) 72%,rgba(255, 255, 255, 1) ,#d55300ff, #0000cbfe, #00c803ff);
+    background-image: url("shutterstock_255404977.jpg");
+    /*background: linear-gradient(rgba(255, 255, 255, 1) 72%,rgba(255, 255, 255, 1) ,#d55300ff, #0000cbfe, #00c803ff);*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;    
