--- a/style.css
+++ b/style.css
@@ -3,11 +3,10 @@ body{
     min-height: 100vh;
     background-image: url("shutterstock_255404977.jpg");
     /*background: linear-gradient(rgba(255, 255, 255, 1) 72%,rgba(255, 255, 255, 1) ,#d55300ff, #0000cbfe, #00c803ff);*/
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     background-position: bottom;    
     background-attachment: fixed;
-    
 }
 
 body:before{
@@ -15,9 +14,7 @@ body:before{
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
-    
+
     
     z-index: -1;
 }
